<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#FF9800"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/radius_corner"
        android:padding="10dp">

        <TextView
            android:id="@+id/floatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:text="@string/announce"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/event"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/point_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/point_shop"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"/>
    </LinearLayout>

</LinearLayout>