<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mypage.MypageFragment">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/account_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:onClick="changeProfileImage"
            android:scaleType="centerCrop"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/account_profile"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname"
                        android:textColor="#FF9800"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/yourNickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:text="99999"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/idcode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/idcode"
                        android:textColor="#FF9800"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/yourIDcode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="55dp"
                        android:text="0"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_gray"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#FF9800"
                android:text="@string/Level"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/yourLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="0"
                android:textColor="@color/white"
                android:layout_marginLeft="200dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/point"
                android:layout_marginLeft="20dp"
                android:textColor="#FF9800"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/yourPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginLeft="182dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/logout"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="320dp"
            android:background="@drawable/radius_corner_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>